fixed some formatting on mobile

--- a/css/project.css
+++ b/css/project.css
@@ -887,4 +887,8 @@
     .prose p {
       font-size: 16px;
     }
+
+    .fig-label {
+      opacity: 1;
+    }
   }
